# Micro-racing-game

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  conanfile.txt  vcpkg.json
.github/workflows/: build.yml
assets/: README.md
src/: ai_bot.cpp  ai_bot.h  camera.cpp  camera.h  car.cpp  car.h  editor.cpp  editor.h  editor_main.cpp  frontend.cpp  frontend.h  game.cpp  game.h  input.cpp  input.h  main.cpp  menu.cpp  menu.h  physics.cpp  physics.h  renderer.cpp  renderer.h  track.cpp  track.h
tools/: workflow_diagnose.py
tracks/: track1.json  track2.json  track3.json
